source/errpy/tests/test_resources/invalid_syntax_tests/invalid_types.pytest
# Copyright (c) Meta Platforms, Inc. and affiliates.
#
# This source code is licensed under the MIT license found in the
# LICENSE file in the root directory of this source tree

## cannot mix bytes and nonbytes literals
message = b"something " \
          "another {a} line"
message = "something " \
          b"another {a} line"

## invalid string prefix
something = a"a string"
something = asdasd"a string"
something = ru"a string"
